src/test/resources/purescript_examples/failing/InfiniteKind.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith InfiniteKind \n\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSDataDeclarationImpl(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('F')
            PsiElement(whitespace)(' ')
        PSTypeArgsImpl(TypeArgs)
          PSIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('F')
            PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PsiElement(()('(')
          PSTypeImpl(Type)
            PSTypeAtomImpl(TypeAtom)
              PSIdentifierImpl(GenericIdentifier)
                PsiElement(identifier)('a')
                PsiElement(whitespace)(' ')
            PSTypeAtomImpl(TypeAtom)
              PSIdentifierImpl(GenericIdentifier)
                PsiElement(identifier)('a')
          PsiElement())(')')
          PsiElement(whitespace)('\n')
